--- a/public/mygrid.css
+++ b/public/mygrid.css
@@ -249,7 +249,7 @@ body {
 	display: grid;
 	height: 100%;
 	grid-gap: 4px;
-	grid-template-columns: repeat(8, 1fr);
+	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: 60% 40%;
 }
 
@@ -264,7 +264,7 @@ body {
 
 .gmbr{
 	padding: 10px;
-	width: 300px;
+	width: 40%;
 	height: auto;
 }
 .review {
